--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./styles.css/">
+    <link href="./styles.css" rel="stylesheet">
+    <script defer src="./main.js"></script>
+    <script defer src="./Op1.js"></script>
+    <script defer src="./Op2.js"></script>
+    <script defer src="./Op3.js"></script>
     <title>Tech It Easy Dashboard</title>
 </head>
 <body>
-<article id="tv-sold"></article>
-<article id="tv-purch"></article>
-<article id="rest"></article>
-<script src="main.js"></script>
+<article id="number-tvs-sold"></article>
+<article id="number-tvs-bought"></article>
+<article id="number-tvs-in-stock"></article>
+<ul id="brand-names"></ul>
 </body>
 </html>
