--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <link href="./styles.css" rel="stylesheet">
     <script defer src="./main.js"></script>
-    <script defer src="./Op1.js"></script>
-    <script defer src="./Op2.js"></script>
-    <script defer src="./Op3.js"></script>
+    <script defer src="./op1.js"></script>
+    <script defer src="./op2.js"></script>
+    <script defer src="./op3.js"></script>
+    <script defer src="./op4.js"></script>
+    <script defer src="./bonus.js"></script>
     <title>Tech It Easy Dashboard</title>
 </head>
 <body>
@@ -14,5 +16,7 @@
 <article id="number-tvs-bought"></article>
 <article id="number-tvs-in-stock"></article>
 <ul id="brand-names"></ul>
+<ul id="brand-names-2"></ul>
+<button id="sort-price" type="button" onclick="alert('Hello world!')">Sort On Price</button>
 </body>
 </html>
