--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 <article id="number-tvs-sold"></article>
 <article id="number-tvs-bought"></article>
 <article id="number-tvs-in-stock"></article>
-<ul id="brand-names"></ul>
-<ul id="brand-names-2"></ul>
-<button id="sort-price" type="button" onclick="alert('Hello world!')">Sort On Price</button>
+<article id="brand-names"></article>
+<article id="brand-names-2"></article>
+<article id="info-single-tv"></article>
+<article id="info-all-tvs"></article>
+<button id="sort-price" type="button" onclick="alert('Hello world!')">Price ↑</button>
 </body>
 </html>
